# heliolabs

./: .gitignore  FRONTEND_STATE_FIXES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.sh  README.md  README_IMPLEMENTATION.md  TESTING_GUIDE.md  TESTS_AND_VERIFICATION.md  USER_CREATION_FIX.md  docker-compose.yml  final_validation.py  test_backend.py  validate_syntax.py
apps/api/: .env.example  Dockerfile  README.md  heliolabs.db  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: auth.py  blog.py  cart.py  checkout.py  contact.py  newsletter.py  orders.py  payments.py  products.py  profile.py
apps/api/app/core/: config.py  dependencies.py  rate_limit.py  security.py
apps/api/app/db/: init_db.py  session.py
apps/api/app/models/: __init__.py  cart.py  common.py  content.py  order.py  product.py  user.py
apps/api/app/repositories/: carts.py  content.py  orders.py  products.py  users.py  verification_codes.py
apps/api/app/schemas/: auth.py  cart.py  content.py  order.py  product.py  user.py
apps/api/app/services/: auth.py  carts.py  checkout.py  content.py  orders.py  otp.py  payments.py  products.py  users.py
apps/api/app/utils/: seed.py
apps/web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/components/: providers.tsx  store-bootstrap.tsx
apps/web/src/data/: discovery.ts  fallback.ts
apps/web/src/lib/: api.ts  seo.ts  utils.ts
apps/web/src/store/: auth-store.ts  cart-store.ts
apps/web/src/types/: api.ts
docs/: architecture.md
(+26 files in other folders)
