[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heliolabs-api"
version = "0.1.0"
description = "FastAPI backend for the HelioLabs skincare commerce platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "slowapi>=0.1.9",
  "sqlmodel>=0.0.22",
  "stripe>=11.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

